--- a/index.html
+++ b/index.html
@@ -1419,6 +1419,62 @@ window.addEventListener('scroll', () => {
   }
 });
 
+  /* ===============================
+   FOOTER — SISTEMA CORRECTO
+================================ */
+
+const footer = document.getElementById('main-footer');
+let cvFooterVisible = false;
+
+/* FOOTER NORMAL */
+function showNormalFooter(){
+  footer.className = '';
+  footer.classList.add('footer-normal');
+}
+
+/* FOOTER CV */
+function handleCVFooterScroll(){
+  const scrollBottom = window.innerHeight + window.scrollY;
+  const pageHeight = document.documentElement.scrollHeight;
+
+  const SHOW_AT = pageHeight - 20;
+  const HIDE_AT = pageHeight - 140;
+
+  if(scrollBottom >= SHOW_AT && !cvFooterVisible){
+    footer.className = '';
+    void footer.offsetHeight;
+    footer.classList.add('cv-in');
+    cvFooterVisible = true;
+  }
+
+  if(scrollBottom < HIDE_AT && cvFooterVisible){
+    footer.className = '';
+    void footer.offsetHeight;
+    footer.classList.add('cv-out');
+    cvFooterVisible = false;
+  }
+}
+
+/* CAMBIO DE SECCIÓN */
+function handleFooterOnSectionChange(sectionId){
+  footer.className = '';
+  footer.style.opacity = '';
+  footer.style.transform = '';
+  cvFooterVisible = false;
+
+  if(sectionId !== 'cv'){
+    showNormalFooter();
+  }
+}
+
+/* SCROLL SOLO EN CV */
+window.addEventListener('scroll', () => {
+  if(document.getElementById('cv').classList.contains('active')){
+    handleCVFooterScroll();
+  }
+});
+
+
   
 </script>
 
