--- a/index.html
+++ b/index.html
@@ -1357,124 +1357,7 @@ function changeSection(id, link) {
     logo.style.animation = 'logoInLeft 1s cubic-bezier(.4,0,.2,1) forwards'; // Reaplica la animación de entrada
   }
 
-  /* ===============================
-   FOOTER — SISTEMA UNIFICADO
-================================ */
-
-const footer = document.getElementById('main-footer');
-let cvFooterVisible = false;
-
-/* ===== FOOTER NORMAL ===== */
-
-function showNormalFooter(){
-  footer.className = '';
-  footer.classList.add('footer-normal');
-}
-
-/* ===== FOOTER CV ===== */
-
-function handleCVFooterScroll(){
-  const scrollBottom = window.innerHeight + window.scrollY;
-  const pageHeight = document.documentElement.scrollHeight;
-
-  const SHOW_AT = pageHeight - 20;
-  const HIDE_AT = pageHeight - 140;
-
-  // ENTRAR
-  if(scrollBottom >= SHOW_AT && !cvFooterVisible){
-    footer.className = '';
-    void footer.offsetHeight;
-    footer.classList.add('cv-in');
-    cvFooterVisible = true;
-  }
-
-  // SALIR
-  if(scrollBottom < HIDE_AT && cvFooterVisible){
-    footer.className = '';
-    void footer.offsetHeight;
-    footer.classList.add('cv-out');
-    cvFooterVisible = false;
-  }
-}
-
-/* ===== CAMBIO DE SECCIÓN ===== */
-
-function handleFooterOnSectionChange(sectionId){
-
-  footer.className = '';
-  footer.style.opacity = '';
-  footer.style.transform = '';
-  cvFooterVisible = false;
-
-  if(sectionId !== 'cv'){
-    showNormalFooter();
-  }
-}
-
-/* ===== LISTENERS ===== */
-
-window.addEventListener('scroll', () => {
-  if(document.getElementById('cv').classList.contains('active')){
-    handleCVFooterScroll();
-  }
-});
-
-  /* ===============================
-   FOOTER — SISTEMA CORRECTO
-================================ */
-
-const footer = document.getElementById('main-footer');
-let cvFooterVisible = false;
-
-/* FOOTER NORMAL */
-function showNormalFooter(){
-  footer.className = '';
-  footer.classList.add('footer-normal');
-}
-
-/* FOOTER CV */
-function handleCVFooterScroll(){
-  const scrollBottom = window.innerHeight + window.scrollY;
-  const pageHeight = document.documentElement.scrollHeight;
-
-  const SHOW_AT = pageHeight - 20;
-  const HIDE_AT = pageHeight - 140;
-
-  if(scrollBottom >= SHOW_AT && !cvFooterVisible){
-    footer.className = '';
-    void footer.offsetHeight;
-    footer.classList.add('cv-in');
-    cvFooterVisible = true;
-  }
-
-  if(scrollBottom < HIDE_AT && cvFooterVisible){
-    footer.className = '';
-    void footer.offsetHeight;
-    footer.classList.add('cv-out');
-    cvFooterVisible = false;
-  }
-}
-
-/* CAMBIO DE SECCIÓN */
-function handleFooterOnSectionChange(sectionId){
-  footer.className = '';
-  footer.style.opacity = '';
-  footer.style.transform = '';
-  cvFooterVisible = false;
-
-  if(sectionId !== 'cv'){
-    showNormalFooter();
-  }
-}
-
-/* SCROLL SOLO EN CV */
-window.addEventListener('scroll', () => {
-  if(document.getElementById('cv').classList.contains('active')){
-    handleCVFooterScroll();
-  }
-});
-
-/* ===============================
+ /* ===============================
    FOOTER — SISTEMA DEFINITIVO
 ================================ */
 
@@ -1487,7 +1370,7 @@ function showNormalFooter(){
   footer.classList.add('footer-normal');
 }
 
-/* FOOTER CV */
+/* FOOTER CV (SCROLL) */
 function handleCVFooterScroll(){
   const scrollBottom = window.innerHeight + window.scrollY;
   const pageHeight = document.documentElement.scrollHeight;
@@ -1495,6 +1378,7 @@ function handleCVFooterScroll(){
   const SHOW_AT = pageHeight - 20;
   const HIDE_AT = pageHeight - 140;
 
+  // ENTRADA
   if(scrollBottom >= SHOW_AT && !cvFooterVisible){
     footer.className = '';
     void footer.offsetHeight;
@@ -1502,6 +1386,7 @@ function handleCVFooterScroll(){
     cvFooterVisible = true;
   }
 
+  // SALIDA
   if(scrollBottom < HIDE_AT && cvFooterVisible){
     footer.className = '';
     void footer.offsetHeight;
@@ -1528,6 +1413,7 @@ window.addEventListener('scroll', () => {
     handleCVFooterScroll();
   }
 });
+
 
   
 </script>
