--- a/index.html
+++ b/index.html
@@ -344,10 +344,14 @@ footer{
   to{opacity:1;transform:translateY(0);}
 }
 
-  footer.show{
+ footer.show{
+  position: relative;
+  margin-top: 120px;
+  pointer-events: auto;
   opacity: 1;
   transform: translateY(0);
 }
+
 
 /* ===== BUTTON ===== */
 .btn{
@@ -927,12 +931,13 @@ footer{
 /* ===== FOOTER CV (SCROLL) ===== */
 
 body.cv-active footer{
-  position: relative;
-  margin-top: 120px;
-  pointer-events: auto;
+  position: fixed;
+  bottom: 0;
+  pointer-events: none;
   opacity: 0;
   transform: translateY(20px);
 }
+
 
   
   
