--- a/index.html
+++ b/index.html
@@ -1186,6 +1186,8 @@ body.cv-active footer{
 let currentLang = 'es';
 
 const footer = document.getElementById('main-footer');
+const cvContent = document.querySelector('.cv-content');
+
 
 /* ===== TRADUCCIONES ===== */
 const translations = {
