--- a/index.html
+++ b/index.html
@@ -323,33 +323,36 @@ p{
 }
 
 /* ===== FOOTER ===== */
+/* Footer normal (todas las secciones) */
 footer{
-  position:fixed;
-  bottom:0;
-  width:100%;
-  padding:18px 40px;
-  text-align:center;
-  font-size:11px;
-  letter-spacing:.08em;
-  color:#9a9a9a;
-  background-color:transparent; /* Fondo transparente */
-  pointer-events:none;
-
-  opacity:0;
-  transform:translateY(20px);
-  animation:footerIn 1.4s cubic-bezier(.4,0,.2,1) forwards; /* Duración igual a la animación de entrada */
-  animation-delay:1.5s; /* Retraso reducido a 1.5 segundos */
-}
-@keyframes footerIn{
-  to{opacity:1;transform:translateY(0);}
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 18px 40px;
+  font-size: 11px;
+  letter-spacing: .08em;
+  color: #9a9a9a;
+  opacity: 0;
+  transform: translateY(20px);
+  pointer-events: none;
+  animation: footerIn 1.4s cubic-bezier(.4,0,.2,1) forwards;
+  animation-delay: 1.5s;
 }
 
- footer.show{
+/* CV: oculto siempre */
+body.cv-active footer{
+  opacity: 0;
+  transform: translateY(20px);
+  pointer-events: none;
+}
+
+/* CV: SOLO visible al final */
+body.cv-active footer.show{
   position: relative;
   margin-top: 120px;
-  pointer-events: auto;
   opacity: 1;
   transform: translateY(0);
+  pointer-events: auto;
 }
 
 
@@ -1252,29 +1255,34 @@ function changeLang(lang){
 
 /* ===== CAMBIO DE SECCIÓN ===== */
 function changeSection(id, link) {
-  if (document.getElementById(id).classList.contains('active')) return;
 
   document.querySelectorAll('.section')
-    .forEach(section => section.classList.remove('active'));
-
+    .forEach(s => s.classList.remove('active'));
   document.getElementById(id).classList.add('active');
 
   document.querySelectorAll('nav a')
     .forEach(a => a.classList.remove('active'));
-
   link.classList.add('active');
 
-  /* Logo */
   const logo = document.getElementById('logo-home');
-  if (id !== 'home') {
-    logo.style.visibility = 'hidden';
+  logo.style.visibility = id === 'home' ? 'visible' : 'hidden';
+
+  if (id === 'cv') {
+    document.body.classList.add('cv-active');
+    footer.classList.remove('show');
+    window.scrollTo(0, 0);
   } else {
-    logo.style.visibility = 'visible';
-    logo.style.animation = 'none';
-    void logo.offsetHeight;
-    logo.style.animation =
-      'logoInLeft 1s cubic-bezier(.4,0,.2,1) forwards';
+    document.body.classList.remove('cv-active');
+    footer.classList.remove('show');
+
+    footer.style.animation = 'none';
+    void footer.offsetHeight;
+    footer.style.animation =
+      'footerIn 1.4s cubic-bezier(.4,0,.2,1) forwards';
+    footer.style.animationDelay = '1.5s';
   }
+}
+
 
   /* Footer normal (NO CV) */
  if (id !== 'cv') {
@@ -1304,18 +1312,15 @@ function handleCVScroll(){
 
   const rect = cvContent.getBoundingClientRect();
 
-  // cuando el final del CV entra en pantalla
-  if (rect.bottom <= window.innerHeight + 10) {
+  if (rect.bottom <= window.innerHeight + 5) {
     footer.classList.add('show');
   } else {
     footer.classList.remove('show');
   }
 }
 
-
-
-
 window.addEventListener('scroll', handleCVScroll);
+
 </script>
 
 
