--- a/index.html
+++ b/index.html
@@ -349,7 +349,8 @@ body.cv-active footer{
 /* CV: SOLO visible al final */
 body.cv-active footer.show{
   position: relative;
-  margin-top: 120px;
+  margin: 120px auto 0;   /* ⬅️ centra horizontalmente */
+  width: fit-content;    
   opacity: 1;
   transform: translateY(0);
   pointer-events: auto;
