--- a/index.html
+++ b/index.html
@@ -354,6 +354,8 @@ body.cv-active footer.show{
   opacity: 1;
   transform: translateY(0);
   pointer-events: auto;
+  animation: footerCVIn 0.9s cubic-bezier(.22,.61,.36,1) forwards;
+
 }
 
 
@@ -942,6 +944,18 @@ body.cv-active footer{
   transform: translateY(20px);
 }
 
+@keyframes footerCVIn {
+  from {
+    opacity: 0;
+    transform: translateY(24px);
+    filter: blur(6px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+    filter: blur(0);
+  }
+}
 
   
   
