--- a/index.html
+++ b/index.html
@@ -929,6 +929,12 @@ body.cv-active footer.show{
   }
 }
 
+@keyframes footerIn{
+  to{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
 
   
   
