--- a/index.html
+++ b/index.html
@@ -330,12 +330,6 @@ footer{
   width: 100%;
   padding: 18px 40px;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  text-align: center;
-
   font-size: 11px;
   letter-spacing: .08em;
   color: #9a9a9a;
@@ -347,6 +341,7 @@ footer{
   animation: footerIn 1.4s cubic-bezier(.4,0,.2,1) forwards;
   animation-delay: 1.5s;
 }
+
 
 
 /* CV: oculto siempre */
@@ -953,7 +948,13 @@ body.cv-active footer.show{
   }
 }
 
-  
+  body:not(.cv-active) footer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
   
 </style>
 </head>
