--- a/index.html
+++ b/index.html
@@ -831,6 +831,26 @@ footer{
 }
 
   
+.cv-section {
+  height: 100vh;
+}
+
+.cv-scroll {
+  height: 100%;
+  overflow-y: auto;      /* AQUÍ está el scroll */
+}
+
+.cv-content {
+  padding: 2rem;
+}
+
+/* Footer normal, sin position */
+.cv-footer {
+  padding: 1rem 0;
+  text-align: center;
+  font-size: 0.8rem;
+  color: #777;
+}
 
 
 .cv-marker{
@@ -1157,7 +1177,7 @@ footer{
 
 
 
-<footer>
+<footer class="cv-footer"
   © 2026 · Luis Blasco-Ibáñez Berbel · Ingeniería en diseño industrial
 </footer>
 
