--- a/index.html
+++ b/index.html
@@ -324,7 +324,6 @@ p{
 
 /* ===== FOOTER ===== */
 footer{
-  position:fixed;
   bottom:0;
   width:100%;
   padding:18px 40px;
@@ -1177,7 +1176,7 @@ footer{
 
 
 
-<footer class="cv-footer"
+<footer class="cv-footer">
   © 2026 · Luis Blasco-Ibáñez Berbel · Ingeniería en diseño industrial
 </footer>
 
