--- a/index.html
+++ b/index.html
@@ -323,26 +323,44 @@ p{
 }
 
 /* ===== FOOTER ===== */
-footer{
-  bottom:0;
-  width:100%;
-  padding:18px 40px;
-  text-align:center;
-  font-size:11px;
-  letter-spacing:.08em;
-  color:#9a9a9a;
-  background-color:transparent; /* Fondo transparente */
-  pointer-events:none;
+#global-footer{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 
-  opacity:0;
-  transform:translateY(20px);
-  animation:footerIn 1.4s cubic-bezier(.4,0,.2,1) forwards; /* Duración igual a la animación de entrada */
-  animation-delay:1.5s; /* Retraso reducido a 1.5 segundos */
+  padding: 18px 40px;
+  text-align: center;
+
+  font-size: 11px;
+  letter-spacing: .08em;
+  color: #9a9a9a;
+
+  background: linear-gradient(
+    to top,
+    rgba(11,11,13,.85),
+    rgba(11,11,13,0)
+  );
+
+  z-index: 900;
+  pointer-events: none;
+
+  opacity: 0;
+  transform: translateY(14px);
+  animation: footerIn 1.2s cubic-bezier(.4,0,.2,1) forwards;
 }
+
 @keyframes footerIn{
-  to{opacity:1;transform:translateY(0);}
+  to{
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
+  .section .content{
+  padding-bottom: 120px;
+}
+  
 /* ===== BUTTON ===== */
 .btn{
   margin-top:14px;
@@ -1176,7 +1194,7 @@ footer{
 
 
 
-<footer class="cv-footer">
+<footer id="global-footer">
   © 2026 · Luis Blasco-Ibáñez Berbel · Ingeniería en diseño industrial
 </footer>
 
