--- a/index.html
+++ b/index.html
@@ -1062,8 +1062,10 @@ p{
   </div>
 </section>
 
-<section id="cv" class="section">
-  <div class="content cv-content">
+<section id="cv" class="section cv-section">
+  <div class="cv-scroll">
+    <div class="content cv-content">
+
 
     <h2 class="fade-up">Currículum Vitae</h2>
 
