--- a/index.html
+++ b/index.html
@@ -964,6 +964,27 @@ p{
   }
 }
 
+/* ===== SCROLL SOLO EN CV ===== */
+.cv-section{
+  height: 100vh;
+}
+
+.cv-scroll{
+  height: 100%;
+  overflow-y: auto;
+  padding-right: 4px;
+}
+
+/* ===== FOOTER HIDE / SHOW ===== */
+#global-footer{
+  transition: opacity .35s ease, transform .35s ease;
+}
+
+#global-footer.hide{
+  opacity: 0;
+  transform: translateY(20px);
+  pointer-events: none;
+}
 
   
   
@@ -1330,7 +1351,7 @@ function changeSection(id, link) {
   link.classList.add('active'); // Aseguramos que el enlace activo tiene la línea debajo
 
   footer.classList.remove('hide');
-
+}
   
   // Si es la sección de Portfolio, aplicamos la clase active al enlace de Portfolio
   if (id === 'portfolio') {
@@ -1375,6 +1396,27 @@ window.addEventListener('scroll', () => {
 
   lastScrollY = currentScrollY;
 });
+
+const footer = document.getElementById('global-footer');
+const cvScroll = document.querySelector('.cv-scroll');
+
+let lastCvScroll = 0;
+
+if (cvScroll) {
+  cvScroll.addEventListener('scroll', () => {
+    const currentScroll = cvScroll.scrollTop;
+
+    if (currentScroll > lastCvScroll + 6) {
+      // Scroll hacia abajo → ocultar
+      footer.classList.add('hide');
+    } else if (currentScroll < lastCvScroll - 6) {
+      // Scroll hacia arriba → mostrar
+      footer.classList.remove('hide');
+    }
+
+    lastCvScroll = currentScroll;
+  });
+}
 
   
 </script>
